Update 'm04d5yeg4-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:dd9091cf844953f1c7c2699c7e7d642a0ea39ba9@sha256:e23c59f7a95db1982e871fd3f065e86329040a57381449529d46c97deeddf8a1

--- a/components/m04d5yeg4-go/overlays/development/deployment-patch.yaml
+++ b/components/m04d5yeg4-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: m04d5yeg4-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:dd9091cf844953f1c7c2699c7e7d642a0ea39ba9@sha256:e23c59f7a95db1982e871fd3f065e86329040a57381449529d46c97deeddf8a1
+          name: container-image
